[gd_scene load_steps=49 format=2]

[ext_resource path="res://MainScenes/Bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/TurretEnemy1.gd" type="Script" id=2]
[ext_resource path="res://Scripts/BasicGolemsArea2D.gd" type="Script" id=3]
[ext_resource path="res://Sprite/BasicGolemEnemy.png" type="Texture" id=4]
[ext_resource path="res://Sprite/GolemEnemy.png" type="Texture" id=5]
[ext_resource path="res://Sounds/explosion06.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/laser5.ogg" type="AudioStream" id=7]
[ext_resource path="res://MainScenes/Hoop.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sprite/Turret.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 320, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 384, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 64, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 128, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 192, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 256, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 320, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 384, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 448, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 256, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 320, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 384, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=33]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Dying",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "Dead",
"speed": 10.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "Attacking",
"speed": 20.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "Spawning",
"speed": 20.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": false,
"name": "Shooting",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 5 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 5 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 5 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 5 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=38]
animations = [ {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "Spin",
"speed": 25.0
} ]

[sub_resource type="RectangleShape2D" id=39]
extents = Vector2( 19.7307, 20.9928 )

[node name="Enemy" type="Node2D"]
position = Vector2( 50, 50 )
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 2 )
Hoop = ExtResource( 8 )
Bullet = ExtResource( 1 )

[node name="GolemSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 33 )
animation = "Shooting"
frame = 6
playing = true

[node name="Tween" type="Tween" parent="GolemSprite"]

[node name="RingSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 38 )
animation = "Spin"
frame = 2

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -4.19714, 0.855623 )
scale = Vector2( 0.654718, 1.20451 )
shape = SubResource( 39 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -4.551, -34.683 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 1.25

[node name="RapidFireTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 3.16224, -9.13536 )
[connection signal="animation_finished" from="GolemSprite" to="." method="Kill_My_Self"]
[connection signal="animation_finished" from="GolemSprite" to="." method="_on_GolemSprite_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="finished" from="DeathSound" to="." method="_on_DeathSound_finished"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="timeout" from="RapidFireTimer" to="." method="_on_RapidFireTimer_timeout"]
